# UAkron-CS-477

./: .gitignore  .gitmodules
Homework/: Parallel Assignments.sln
Homework/Distributed Driver/: Distributed Driver.cpp  Distributed Driver.vcxproj  Distributed Driver.vcxproj.filters  ReadMe.txt  Shared Data.h  stdafx.cpp  stdafx.h
Homework/Distributed Processor/: Distributed Processor.cpp  Distributed Processor.vcxproj  Distributed Processor.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
Homework/Hello World/: Hello World.cpp  Hello World.vcxproj
Homework/Parallel Sort/: Merge Sort.cpp  Merge Sort.hpp  Parallel Sort.cpp  Parallel Sort.vcxproj  Parallel Sort.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
Homework/Web Server/: Web Server.vcxproj  Web Server.vcxproj.filters  async.cpp  server.cpp  server.h
Homework/conv/: Convolution.vcxproj  Convolution.vcxproj.filters  conv.cpp  stdafx.h
Homework/primes/: CMakeLists.txt  Primes.vcxproj  Primes.vcxproj.filters  primes.cpp  stdafx.h
Homework/primes sorted/: CMakeLists.txt  primes.cpp
Homework/test/: CMakeLists.txt  thread_test.cpp
include/: boost_image.h  thread.h
